<resources>
    <string name="app_name">Tyche</string>
    <string name="create_account_action">Create account</string>
    <string name="account_exists_text">Do you have an account already?</string>
    <string name="sign_in_with_email_action">Email</string>
    <string name="sign_out_action">Log out</string>
    <string name="play_pool_text">See who’s guessed the most scores and challenge them now</string>
    <string name="score_tab">Scores</string>
    <string name="bet_tab">Bets</string>
    <string name="history_bets_tab">History</string>
    <string name="change_pool_action">Change pool</string>
    <string name="sign_in_with_email_and_password">Email and password</string>
    <string name="continue_with_text">Continue with:</string>
</resources>
